EDUPROV: 18-05-2021 Add neumorphism ui and update keywords

--- a/course/bachelor-of-education-course.html
+++ b/course/bachelor-of-education-course.html
@@ -7,10 +7,10 @@
     <title>B.Ed Course, Eligibility, Admission, Top Colleges | Eduprov</title>
     <meta name="description" content="B.Ed Course is professional degree to become teachers in school or college. With Eduprov find the Top Colleges, Admission, Career, Scope & more
     ">
-    <meta name="keywords" content="
+    <meta name="keywords" content="bachelor of education, bachelor of education courses, bachelor courses after 12th, bachelor of teaching, bachelor of education studies, bachelor degree in education requirements, bachelor of education requirements, bachelor of education subjects, bachelor of education special education, bachelor of education after degree, bachelor degree in dance education, bachelor courses after 12th commerce, bachelor of ed, bachelor of teacher education, bachelor education degree courses, bachelor of teaching and learning, bachelor in teacher education, bachelor of education admission 2020, bachelor of education in psychology, bachelor in education requirements, bachelor of education eligibility, bachelor in education subjects, bachelor of education admission, bachelor degree in education courses, bachelor of education business studies, bachelor of education colleges, bachelor of education information technology, bachelor of education accounting, bachelor of education undergraduate degree, bachelor degree in montessori education, bachelor of teaching course, bachelor of education admission requirements, bachelor courses after 12th arts,
+    
     ">
-    <meta name="author" content="Naveen">
-
+    <meta name="author" content="thephotogenicbug">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
     <link rel="apple-touch-icon" href="/images/favicon.png">
@@ -161,19 +161,22 @@
                         <label style="font-weight: bold">Social Media</label>
                         <li class="social">
                             <span>
-                                <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                               <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                             <span>
-                                <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                               <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                             </span>
                             <span>
-                                <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                               <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                             </span>
+                            <span>
+                              <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+                           </span>
                         </li>
                     </ul>
                     <ul class="list-unstyled mt-md-3 mt-5">
                         <label style="font-weight: bold">Address</label>
                         <p>
-                            Address: No 20 2nd Floor<br />
+                           No 20 2nd Floor<br />
                             Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
                             560001
                         </p>
