--- a/course/bachelor-of-physical-education.html
+++ b/course/bachelor-of-physical-education.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B Physical Education Admission Eligibility Scope | EDUPROV</title>
+  <title>B Physical Education Admission Eligibility Scope | Eduprov</title>
   <meta name="description" content="Physical Education deals with the importance of physical fitness of human body. To Know about admission, eligibility, 
   top colleges, career & scope visit EDUPROV">
   <meta name="keywords" content="what is the meaning of physical education, what is the aim of physical education, what is physical education about, what is physical education, what are the career options in physical education, the physical education, the importance of physical education, teaching physical education, physical education pdf, physical education objectives, physical education notes of class 11, physical education notes class 12, physical education notes class 11, physical education meaning,  physical education in schools, physical education in school, physical education importance, physical  education health, physical education degree, physical education definition, physical education courses,  physical education course, physical education class 12 syllabus, physical education class 12 notes,  physical education class 12 book, physical education class 12, physical education class 11 notes,  physical education class 11 book pdf, physical education class 11 book, physical education class 11,  physical education book for class 12, physical education book for class 11, physical education book  class 11, physical education at school, pet teacher, pe notes class 12, pe notes class 11, objectives  of physical education, objective of physical education, meaning of physical education, meaning and  definition of physical education, importance of physical education, health physical education, health in physical education, definition of physical education, define physical education, courses in physical education, courses for physical education, course of physical education, class 12th physical education notes, class 12 physical education syllabus, class 12 physical education notes, class 12 physical education book, class 11 physical education notes, class 11 physical education book pdf, career options in physical education, bachelor of physical education, bachelor in physical education, aims of physical education, aim of physical education,
     ">
-  <meta name="author" content="Naveen">
+  <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
   <link rel="apple-touch-icon" href="/images/favicon.png">
@@ -55,6 +55,7 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
@@ -176,19 +177,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -266,22 +270,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
