--- a/course/bachelor-of-social-work.html
+++ b/course/bachelor-of-social-work.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Bachelor of Social Work (BSW) Admission, Colleges | Eduprov</title>
+  <title>Bachelor of Social Work (BSW) Admission Eligibility | Eduprov</title>
   <meta name="description" content="Social Work (BSW) gives students knowledge skills social welfare help in solving economic social issues. For counseling, admission, college visit EDUPROV">
   <meta name="keywords"
-    content="social work admission, bsw, bsw course, bsw full form, jobs as social worker, jobs for social work, jobs of social worker, job in social work, job social work, social work jobs, social workers job, jobs social work, social worker job, social worker jobs, bachelor in social work, social work bachelor, bachelors social work, bsw degree, courses in social work, social worker course, social workers course, bsw subject, bsw full form, bsw degree, bsw course syllabus, bsw course subjects, bsw course, bsw, bachelors social work, bachelor of social work syllabus, 
-    bachelor of social work subjects, bachelor of social work jobs, bachelor in social work,">
-  <meta name="author" content="Renuka">
+    content="social work admission, bsw, bsw course, bsw full form, jobs as social worker, jobs for social work, jobs of social worker, job in social work, job social work, social work jobs, social workers job, jobs social work, social worker job, social worker jobs, bachelor in social work, social work bachelor, bachelors social work, bsw degree, courses in social work, social worker course, social workers course, bsw subject, bsw full form, bsw degree, bsw course syllabus, bsw course subjects, bsw course, bsw, bachelors social work, bachelor of social work syllabus, bachelor of social work subjects, bachelor of social work jobs, bachelor in social work,
+    ">
+  <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -21,8 +21,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
 </head>
 
 <body>
@@ -43,9 +41,9 @@
 
         <div class="navbar-nav ml-auto ">
           <div class="navbar-nav ml-auto ">
-            <a href="../index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="../contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="../student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+            <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+            <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
           </div>
         </div>
 
@@ -57,6 +55,7 @@
   
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
 
@@ -71,13 +70,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white">
-            Course Information
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+          Course Information
         </h2>
       </div>
     </div>
@@ -86,27 +83,28 @@
     <div class="row">
         <div class="col-md-12">
           <p class="text-justify" id="paragraph-font">
-            Social work as the name suggests this course will train one to be helpful for others. 
+             <b>Social work </b>as the name suggests this course will train one to be helpful for others. 
             If you have a passion to help, others then this is the best course for you. This course 
             helps you in different ways to understand the community and how to be helpful for the world.</p>
            
             <p class="text-justify" id="paragraph-font">
-            <b>Bachelor of Social Work (BSW)</b> is a <b>3-year undergraduate degree</b> in the field of <b>Social Work. </b>
-            It is also termed as <b>Bachelor of Arts in Social Work (BASW).</b> During the course, a candidate 
-            has to learn the skills of social works in the <b>6-semester program.</b> This program is beneficial 
-            for those who have helping nature and wants to do something good for others.</p>
+            <b>Bachelor of Social Work (BSW)</b> is a 3-year undergraduate degree in the field of Social Work.
+            It is also termed as <b>Bachelor of Arts in Social Work (BASW)</b>. During the course, a candidate 
+            has to learn the skills of social works in the 6-semester program. This program is beneficial 
+            for those who have helping nature and wants to do something good for others.
+          </p>
 
             <p class="text-justify" id="paragraph-font">
             The aim of the course is to give detailed information to the student about how they can be 
             helpful to others. Just like the name suggests a person will be socially involved with others 
-            while <b>helping the needy, poor or old aged person.</b> The availability of social work is around 
-            the globe which is beneficial to the <b>BSW degree holder.</b></p>
+            while helping the needy, poor or old aged person. The availability of social work is around 
+            the globe which is beneficial to the BSW degree holder.</p>
 
              <p class="text-justify" id="paragraph-font">
              After gaining a <b>bachelor’s degree in BSW,</b> you are able to work in various Agencies that work 
              for Human service. There is also an advanced course Degree of <b>Master in Social Work (MSW),</b> which 
-             can be pursued after a <b>BSW degree.</b>
-                </p>
+             can be pursued after a BSW degree.
+             </p>
 
 
             <hr />
@@ -115,19 +113,16 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h2 class="text-center">
-                <button class="btn btn-large  btn-primary text-white" >
-                    Eligibility Criteria
-                </button>
+            <h2 class="text-center text-primary" id="tag-font">
+                Eligibility 
             </h2>
         </div>
 
 
-        <div class="col-md-12">
+        <div class="col-md-12 mt-2">
           <ul>
-           <li><b>The Minimum qualification needed is to pass the 10+2 exam. However, the person who passes 12th with Arts is having more advantage. 
-               </b></li>
-            <li><b>The Major challenge in this course is to be psychologically and physically fit. </b></li>
+           <li>The Minimum qualification needed is to pass the 10+2 exam. However, the person who passes 12th with Arts is having more advantage. </li>
+            <li>The Major challenge in this course is to be psychologically and physically fit. </li>
         
           </ul>
             <hr />
@@ -135,30 +130,28 @@
 
         <div class="row">
           <div class="col-md-12">
-              <h2 class="text-center">
-                  <button class="btn btn-large  btn-primary text-white" >
-                    Career & Scope
-                  </button>
+              <h2 class="text-center text-primary" id="tag-font">      
+                   Scope
               </h2>
           </div>
   
   
-          <div class="col-md-12">
+          <div class="col-md-12 mt-2">
            <p class="text-justify" id="paragraph-font">
-            A BSW degree holder has its own specialization after the completion of the course. 
+            A <b>BSW degree holder</b> has its own specialization after the completion of the course. 
             Still, there are various open fields in which they can work. The specialist in medical 
-            and psychiatric is able to join <b>counseling centers, clinics, mental hospitals, old age 
-            homes, hospitals.</b> A criminology specialist is able to work in <b>criminal rehabilitation, 
-            prisons, and other similar areas.</b>  The ones who specialize in labor knowledge they are 
-            able to get jobs in various <b>MNS’s, HR department and other industrial areas which are 
-            having labors working there.</b>
+            and psychiatric is able to join counseling centers, clinics, mental hospitals, old age 
+            homes, hospitals. A criminology specialist is able to work in criminal rehabilitation, 
+            prisons, and other similar areas.  The ones who specialize in labor knowledge they are 
+            able to get jobs in various MNS’s, HR department and other industrial areas which are 
+            having labors working there.
 
            </p>
 
             <p class="text-justify" id="paragraph-font">  
             One of the best qualities about this degree is that a person can easily work with international 
-            organizations like <b>UNICEF, WHO or UNESCO.</b> Another best thing about these organizations is that 
-            they come to the country with various <b>plans and camps.</b> A degree holder can easily reach them and 
+            organizations like UNICEF, WHO or UNESCO. Another best thing about these organizations is that 
+            they come to the country with various plans and camps. A degree holder can easily reach them and 
             work with them and they are also in need for locals to join with them.
 
             </p>
@@ -167,8 +160,6 @@
                 for the benefits of others. But with the coming of corporate individuals and different 
                 program criteria, the salary has increased. The salary will be increased as the experience 
                 level of a person increases.
-
-
             </p>
 
               <hr />
@@ -198,16 +189,19 @@
         <ul class="list-unstyled mt-md-3 mt-5">
           <label style="font-weight: bold">Social Media</label>
           <li class="social">
-            <span>
-              <i class="fab fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
-            <span>
-              <i class="fab fa-instagram m-2 fa-1x" aria-hidden="true"></i>
-            </span>
-            <span>
-              <i class="fab fa-twitter m-2 fa-1x" aria-hidden="true"></i>
-            </span>
+              <span>
+                 <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
+              <span>
+                 <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                 <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+             </span>
           </li>
-        </ul>
+      </ul>
         <ul class="list-unstyled mt-md-3 mt-5">
           <label style="font-weight: bold">Address</label>
           <p>
@@ -289,22 +283,22 @@
       <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
         <ul class="list-unstyled">
           <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
             <li>MBA</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
             <li>MEDICAL</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
             <li>ENGINEERING</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
             <li>LAW</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
             <li>DESIGNING</li>
           </a>
-          <a href="" style="text-decoration: none; color: white">
+          <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
             <li>ARTS</li>
           </a>
         </ul>
