--- a/course/bcom-course.html
+++ b/course/bcom-course.html
@@ -4,36 +4,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title> B.Com Course details, Admission, Colleges, Career | Eduprov</title>
-  <meta name="description" content="B.Com deals with functioning of 
-    business with knowledge in finance, accounts, taxation & management.
-     Get admission in top colleges, career & scope visit EDUPROV
+  <title>Bachelor of Commerce Admission Eligibility Scope | Eduprov</title>
+  <meta name="description" content="B.Com deals with functioning of  business with knowledge in finance, accounts, taxation & management. Get admission in top colleges, career & scope visit EDUPROV
     ">
   <meta name="keywords"
-    content="admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, 
-    admission, admissions, counselling, counseling, bangalore counseling, abroad admission consultants, abroad education consultants, academic career coach,
-     academic consultant in bangalore, admission, admission assistance , admission consultancy in bangalore, 
-     admission consultant, admission consultant in bangalore, admission consultant near me, admission guidance, 
-     admission guidance in bangalore, admission through management quota, admission through nri quota, bangalore 
-     university, best admission consultant in bangalore, best career guidance, best college admission consultant 
-     in bangalore, best colleges in bangalore, best education consultancy in bangalore, career counselling , 
-     career guidance, college, college admission, college admission assistance, college admission consultant 
-     in bangalore, college admission counselore near me, college admission guidance, college admission in bangalore, 
-     college admission information, college admission process, college admissions advice, college admissions
-      consultant, college admissions counselor, college advisor, college consultant, college counselor, college
-       planning consultant, colleges in bangalore, direct admission, direct admission consultants, education, 
-       education admission guidance, education counsellor, educational consultants in bangalore, educational
-        guidance, foreign studies consultants, genuine admission consultant, international admissions, 
-        international education consultancy, international student admission, international university 
-        admission, mba admission assistance, nursing admission, overseas education consultant, overseas 
-        education consultants, overseas education consultants near me, para-medical colleges in bangalore, p
-        uc admission, school admission, school admission assistance, student consultants, study abroad consultant,
-        study abroad consultants in bangalore, university admission, bachelor of commerce, bachelor of commerce degree, bachelor of commerce subjects, bachelor of commerce jobs, bachelor of commerce short form, bachelor of commerce accounting and finance, bachelor of commerce meaning, bachelor of commerce in accounting and finance, bachelor of commerce canada, bachelor of commerce australia, bachelor of commerce accounting, bachelor of commerce courses, bachelor of commerce in india, bachelor of commerce result 2019">
-  <meta name="author" content="Naveen">
+    content="bachelor of commerce, bachelor of commerce subjects, bachelor of commerce honours, bachelor degree in commerce, commerce honours, bachelor of commerce in accounting and finance, commerce first year subjects, undergraduate courses in commerce, bachelor of commerce in accounting, bachelor of commerce in business management, bachelor of commerce abbreviation, commerce major, bachelor of commerce in economics, bachelor of commerce in financial management, bachelor of commerce finance, bachelor of commerce in human resource management, bachelor of commerce in business informatics, bachelor of commerce in marketing management, bachelor of commerce marketing, bachelor of commerce majors, bachelor of commerce management, bachelor of commerce course list, bachelor of commerce options, bachelor of commerce bhu undergraduate, bachelor of commerce in entrepreneurship, bachelor of commerce graduation, bachelor of commerce and advanced studies, bachelor courses after 12th commerce, bachelor of commerce in banking and insurance, bachelor of commerce general, bachelor of commerce careers, bachelor degree for commerce students, bachelor of commerce in financial markets, bachelor of e commerce, bachelor of commerce in information and technology management, bachelor of commerce major in accounting, bachelor degree after 12th commerce, graduation subjects in commerce, bachelor of commerce computer application, bachelor of commerce international business, bachelor of commerce in tourism management, bachelor of commerce finance option, bachelor of commerce courses, bachelor of commerce major in finance, bachelor of commerce in accounting & finance, graduation commerce subjects, bachelor of commerce accounting option, bachelor courses for commerce students, commerce in accounting, bachelor of commerce honours in business management, bachelor of commerce international, bachelor of commerce in information technology, bachelor of commerce advanced studies, bachelor of commerce honors, bachelor of commerce mun, bachelor of commerce and economics, bachelor of commerce degree certificate, e commerce bachelor degree, best bachelor degree for commerce students, bachelor of commerce in banking & insurance, bachelor of commerce course units, bachelor of comm, bachelor of commerce and psychology, bba commerce subjects, bachelor of commerce and bachelor of advanced studies, bachelor of commerce honours degree, bachelor of commerce and finance, bachelor of commerce accounting department, bachelor of commerce description, bachelor of commerce professional, bachelor of commerce specializations, bachelor of commerce professional accounting, bachelor of commerce prerequisites, bachelor of advanced computing and bachelor of commerce, bachelor of commerce double major, bachelor of commerce in tourism and hospitality management, commerce major in accounting, bachelor of commerce major in management, commerce major in management, bachelor of electronic commerce, bachelor of commerce in industrial and organisational psychology careers, bachelor of commerce subjects list, bachelor of commerce in banking and finance, bachelor of commerce study plan, best bachelor degree after 12th commerce, bachelor of commerce in international accounting, bachelor of commerce business technology management, bachelor of commerce program, bachelor of commerce liberal studies, bachelor of commerce honours in human resource management, best bachelor degree in commerce, bachelor of commerce banking and finance, bachelor of engineering and commerce, bachelor of commerce and bachelor of information technology, bachelor of commerce and business administration, about bachelor of commerce, degree of bachelor of commerce, bachelor of applied commerce, bachelor of commerce degree abbreviation, bachelor of commerce honours subjects, bachelor of commerce in management marketing, bachelor of commerce banking and insurance, bachelor of commerce in financial accounting, bachelor's degree after 12 commerce, bachelor of commerce and information technology, bachelor of commerce bharathiar university ug, bachelor of commerce in retail management, bachelor of commerce in banking and financial services, bachelor of commerce in accountancy, bachelor of commerce honours in marketing management, bachelor of commerce and administration, bachelor of commerce and it, commerce major in marketing, bachelor of commerce in business administration, bachelor of commerce finance and accounting, bachelor of commerce honours in business informatics, bachelor of commerce and bachelor of psychology, commerce honours subjects, bachelor of economics and commerce, courses after bachelor of commerce, bachelor degree in commerce stream, bachelor of commerce business administration, commerce finance major, bachelor of commerce in business management careers, after bachelor of commerce, bachelor of engineering honours and bachelor of commerce, bachelor of commerce honours in financial management, bachelor of commerce in chartered accountancy, bachelor of commerce information technology, 1st year subjects of commerce, bachelor of commerce international finance, bachelor of commerce electives, bachelor of commerce double degree, bachelor of commerce in industrial and organisational psychology, bachelor of commerce bachelor of advanced studies, bachelor of commerce major in marketing, bachelor of commerce eligibility,
+    ">
+  <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -41,8 +22,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-
 </head>
 
 <body>
@@ -62,9 +41,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="../index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="../contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="../student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
         </div>
    
       </div>
@@ -75,6 +54,7 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
@@ -89,13 +69,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center text-primary" id="tag-font">
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -107,7 +85,7 @@
           This globe evolves with commerce. Commerce can be simply termed as trade.
           There is no such record of when this trade started, but now it has become the backbone of a business.
           Commerce deals with the trade-in large scale. Understanding commerce is very important for every business.
-          <strong> B.Com (Hons) </strong>is an undergraduate degree that includes a research dissertation. Commerce is
+          <strong> B.Com  </strong>is an undergraduate degree that includes a research dissertation. Commerce is
           present in each
           and every sector and in every department. So the demand for the candidate who completes this course is high.
           In this program, you will gain the knowledge and skill, how to meet all upcoming challenges of the business
@@ -116,7 +94,7 @@
           course is the specialization of subjects like economics and accounting.
         </p>
 
-        <p class="text-justify">
+        <p class="text-justify" id="paragraph-font">
           In this three-year undergraduate course, one will know about the Economics, principles of accounting,
           statistics, economic theory, business studies, banking law, finance, management studies, etc… The
           knowledge you gain in learning the above-mentioned subjects in the six semesters will lead to a bright
@@ -129,14 +107,12 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            ELIGIBILITY
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">     
+            Eligibility
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
           Every applicant who likes to do this course should fulfill the eligibility condition mentioned by
           the particular institutions. The basic qualification is 10+2. Every institution has its own cutoffs
@@ -153,16 +129,14 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            SCOPE
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Scope
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
-          After successful completion of B.Com (Horns), one can work in both the public and private sectors.
+          After successful completion of B.Com  one can work in both the public and private sectors.
           One has a wide range of options in various industries. The roles include Accountant, Tax Consultant,
           Human Resource, Banker, BPO / KPO, Auditor, Stock Broker, Lecturer, Export-Import Manager, Finance
           Consultant, Insurance Consultant, Event Manager, Travel Agent / Travel Manager, Market Researcher,
@@ -182,7 +156,7 @@
           Commerce has applied in various sectors and all sectors have their own salary packages
         </p>
 
-        <hr />
+       
       </div>
 
       <!--Table start-->
@@ -190,6 +164,7 @@
       <!--Table End-->
     </div>
   </div>
+  <hr />
 
   <!--Course End-->
 
@@ -203,19 +178,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -293,22 +271,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
