--- a/course/bcom-hons-course.html
+++ b/course/bcom-hons-course.html
@@ -4,22 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Com Hons Course details, Admission, Colleges, Career | Eduprov</title>
-  <meta name="description" content="
-  b.com hons, syllabus of b.com hons, b.com hons syllabus, what is b.com hons,
-     b.com hons subjects, b.com hons subject list, b.com hons means, b.com hons colleges in india,
-     b.com hons colleges in delhi, b.com hons full form, b.com hons colleges in hyderabad, 
-     jobs for b.com hons, b.com hons result 2019, b com hons economics, b.com hons eligibility, 
-     subjects in b.com hons, b.com hons colleges in bangalore, what is difference between b.com and b.com honours, 
-     jobs for b.com hons graduates, B.Com Hons deals with functioning of business with knowledge in finance, 
-    accounts, taxation & management. Get admission in top colleges, career & scope visit EDUPROV">
-  <meta name="keywords" content="admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, 
-    admission, admissions, counselling, counseling, bangalore counseling, 
+  <title>Bachelor of Commerce Hons Admission Colleges Career | Eduprov</title>
+  <meta name="description" content="B.Com Hons deals with functioning of business with knowledge in finance, accounts, taxation & management. Get admission in top colleges, career & scope visit EDUPROV">
+  <meta name="keywords" content=" bachelor of commerce,bachelor of commerce subjects,bachelor of commerce honours,bachelor degree in commerce,commerce honours,bachelor of commerce in accounting and finance,commerce first year subjects,undergraduate courses in commerce,bachelor of commerce in accounting,bachelor of commerce in business management,bachelor of commerce abbreviation,commerce major,bachelor of commerce in economics,bachelor of commerce in financial management,bachelor of commerce finance,bachelor of commerce in human resource management,bachelor of commerce in business informatics,bachelor of commerce in marketing management,bachelor of commerce marketing,bachelor of commerce majors,bachelor of commerce management,bachelor of commerce course list,bachelor of commerce options,bachelor of commerce bhu undergraduate,bachelor of commerce in entrepreneurship,bachelor of commerce graduation,bachelor of commerce and advanced studies,bachelor courses after 12th commerce,bachelor of commerce in banking and insurance,bachelor of commerce general,bachelor of commerce careers,bachelor degree for commerce students,bachelor of commerce in financial markets,bachelor of e commerce,bachelor of commerce in information and technology management,bachelor of commerce major in accounting,bachelor degree after 12th commerce,graduation subjects in commerce,bachelor of commerce computer application,bachelor of commerce international business,bachelor of commerce in tourism management,bachelor of commerce finance option,bachelor of commerce courses,bachelor of commerce major in finance,bachelor of commerce in accounting & finance,graduation commerce subjects,bachelor of commerce accounting option,bachelor courses for commerce students,commerce in accounting,bachelor of commerce honours in business management,bachelor of commerce international,bachelor of commerce in information technology,bachelor of commerce advanced studies,bachelor of commerce honors,bachelor of commerce mun,bachelor of commerce and economics,bachelor of commerce degree certificate,e commerce bachelor degree,best bachelor degree for commerce students,bachelor of commerce in banking & insurance,bachelor of commerce course units,bachelor of comm,bachelor of commerce and psychology,bba commerce subjects,bachelor of commerce and bachelor of advanced studies,bachelor of commerce honours degree,bachelor of commerce and finance,bachelor of commerce accounting department,bachelor of commerce description,bachelor of commerce professional,bachelor of commerce specializations,bachelor of commerce professional accounting,bachelor of commerce prerequisites,bachelor of advanced computing and bachelor of commerce,bachelor of commerce double major,bachelor of commerce in tourism and hospitality management,commerce major in accounting,bachelor of commerce major in management,commerce major in management,bachelor of electronic commerce,bachelor of commerce in industrial and organisational psychology careers,bachelor of commerce subjects list,bachelor of commerce in banking and finance,bachelor of commerce study plan,best bachelor degree after 12th commerce,bachelor of commerce in international accounting,bachelor of commerce business technology management,bachelor of commerce program,bachelor of commerce liberal studies,bachelor of commerce honours in human resource management,best bachelor degree in commerce,bachelor of commerce banking and finance,bachelor of engineering and commerce,bachelor of commerce and bachelor of information technology,bachelor of commerce and business administration,about bachelor of commerce,degree of bachelor of commerce,bachelor of applied commerce,bachelor of commerce degree abbreviation,bachelor of commerce honours subjects,bachelor of commerce in management marketing,bachelor of commerce banking and insurance,bachelor of commerce in financial accounting,bachelor's degree after 12 commerce,bachelor of commerce and information technology,bachelor of commerce bharathiar university ug,bachelor of commerce in retail management,bachelor of commerce in banking and financial services,bachelor of commerce in accountancy,bachelor of commerce honours in marketing management,bachelor of commerce and administration,bachelor of commerce and it,commerce major in marketing,bachelor of commerce in business administration,bachelor of commerce finance and accounting,bachelor of commerce honours in business informatics,bachelor of commerce and bachelor of psychology,commerce honours subjects,bachelor of economics and commerce,courses after bachelor of commerce,bachelor degree in commerce stream,bachelor of commerce business administration,commerce finance major,bachelor of commerce in business management careers,after bachelor of commerce,bachelor of engineering honours and bachelor of commerce,bachelor of commerce honours in financial management,bachelor of commerce in chartered accountancy,bachelor of commerce information technology,1st year subjects of commerce,bachelor of commerce international finance,bachelor of commerce electives,bachelor of commerce double degree,bachelor of commerce in industrial and organisational psychology,bachelor of commerce bachelor of advanced studies,bachelor of commerce major in marketing,bachelor of commerce eligibility,
+  
     ">
-  <meta name="author" content="Naveen">
+  <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -27,8 +21,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
@@ -48,9 +40,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="../index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="../contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="../student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+            <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+            <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
         </div>
    
       </div>
@@ -61,13 +53,14 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
     <div class="container text-white">
       <div class="row">
         <div class="col-md-8 mt-5 pt-5">
-         <h1>B.Com Hons</h1>
+         <h1>Bachelor of Commerce Hons</h1>
         </div>
       </div>
     </div>
@@ -75,13 +68,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center text-primary" id="tag-font">
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -103,7 +94,7 @@
           The added advantage of this course is the specialization of subjects like economics and accounting.
         </p>
 
-        <p class="text-justify">
+        <p class="text-justify" id="paragraph-font">
           In this three-year undergraduate course, one will know about the Economics, principles of accounting,
           statistics, economic theory, business studies, banking law, finance, management studies, etc...
           The knowledge you gain in learning the above-mentioned subjects in the six semesters will lead to a
@@ -116,14 +107,12 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            ELIGIBILITY
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Eligibility
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
           Every applicant who likes to do this course should fulfill the eligibility condition mentioned
           by the particular institutions. The basic qualification is 10+2. Every institution has its own
@@ -133,19 +122,17 @@
           complete guidance for each and every level will be provided by the <strong>EDUPROV</strong> experts. You don't
           need
           to worry about any process when the complete guidance of your course is in our hands.
-
-        </p <hr />
+          <hr/>
+        </p>
       </div>
-
+ 
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            SCOPE
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Scope
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
           After successful completion of <strong>B.Com (Horns),</strong> one can work in both the public and private
           sectors.
@@ -167,7 +154,6 @@
           then you must keep your student visa and passport for further studies. Commerce has applied in various sectors
           and all sectors have their own salary packages
         </p>
-        <hr />
       </div>
 
       <!--Table start-->
@@ -175,7 +161,7 @@
       <!--Table End-->
     </div>
   </div>
-
+<hr/>
   <!--Course End-->
 
   <!--Footer Start-->
@@ -188,19 +174,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -278,22 +267,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
