--- a/course/bcom-professional-course.html
+++ b/course/bcom-professional-course.html
@@ -4,23 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B.Com professional Admission, Top Colleges, Career | Eduprov</title>
+  <title>B.Com professional Admission Eligibility Scope| Eduprov</title>
   <meta name="description" content="B.Com professional upskill on Accounting, Finance related to Commerce & business.
      Visit EDUPROV for Admission in Top Colleges, Eligibility & to know it's Career">
-  <meta name="keywords" content="admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, 
-    admission, admissions, counselling, counseling, bangalore counseling, b.com professional, b.com professional accounting,  is b.com a professional course, 
-    b.com professional accounting subjects, is b.com a professional degree, after b.com professional courses, 
-    b.com professional subjects, b.com professional course, b.com professional course, b.com professional course,
-    b.com professional accounting syllabus, b.com professional courses,  b.com professional courses, 
-    b.com professional course details, what is b com professional course, professional course for 
-    b.com students, what is b.com professional, kristu jayanti college b.com professional, 
-    is b.com hons a professional course,
+  <meta name="keywords" content="admission counselor, admission in bangalore, career counseling, career counseling in bangalore, admission consultant, admission, admissions, counselling, counseling, bangalore counseling, b.com professional, b.com professional accounting,  is b.com a professional course, b.com professional accounting subjects, is b.com a professional degree, after b.com professional courses, b.com professional subjects, b.com professional course, b.com professional course, b.com professional course,b.com professional accounting syllabus, b.com professional courses,  b.com professional courses, b.com professional course details, what is b com professional course, professional course for b.com students, what is b.com professional, kristu jayanti college b.com professional, is b.com hons a professional course,
     ">
-  <meta name="author" content="Naveen">
+  <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -28,7 +21,6 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
@@ -48,9 +40,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="../index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="../contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="../student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+            <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+            <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
         </div>
    
       </div>
@@ -61,6 +53,7 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
@@ -75,13 +68,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center text-primary" id="tag-font">
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -90,7 +81,7 @@
     <div class="row">
       <div class="col-md-12">
         <p class="text-justify" id="paragraph-font">
-          <strong>Bachelor of Commerce [B. Com] (professionals)</strong> is an undergraduate degree where one will gain
+          <strong>Bachelor of Commerce (B.Com professionals)</strong> is an undergraduate degree where one will gain
           knowledg +e
           in areas like accounting, taxation, and finance in the course duration of 3 years. The program aims at
           developing Accountancy and Finance professionals to meet the Industry requirements in India and Abroad.
@@ -109,14 +100,12 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
-            ELIGIBILITY
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Eligibility
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
           In order to get into the course, one should have Pass in 10+2 grade or equivalent with subjects like
           accountancy, business mathematics, Economics, or Maths.
@@ -134,14 +123,12 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            SCOPE
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Scope
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
           The <strong>Bachelor of Commerce</strong> fresher can start his career in areas like Banking– Retail /
           personal banking,
@@ -179,19 +166,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -269,22 +259,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
