--- a/course/bfd-course.html
+++ b/course/bfd-course.html
@@ -4,59 +4,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BFD Course Admission, Top College, Career & Scope | Eduprov</title>
+  <title>BFD Course Admission Eligibility Scope | Eduprov</title>
   <meta name="description" content="Fashion Designing deals with most recent trends in fashion industry, creative patterns of clothing line. Get admission in colleges, counseling & scope @ EDUPROV
     ">
-  <meta name="keywords" content="fasion designing,
-  fasion designing course,
-  bachelor of designing,
-  bachelor of fashion design,
-  famous fasion designers,
-  bachelor's degree in fashion designing,
-  bachelor of design salary,
-  fasion and design,
-  ba design,
-  bachelor of fashion,
-  bachelor degree of fashion designing,
-  fashion designer bachelor degree,
-  industrial design bachelor's degree,
-  bachelor of design colleges,
-  bachelor of interior design course,
-  fashion designing bachelor course,
-  bachelor of design eligibility,
-  bachelor of fashion business,
-  bachelor of interior design eligibility,
-  bachelor of branded fashion design,
-  bachelor of interior design course duration,
-  ba designer,
-  bachelor of fashion and apparel design,
-  bachelor of fashion designing course,
-  best colleges for bachelor of design,
-  bachelors in fashion,
-  fashion business bachelor degree,
-  bachelor of design and business,
-  bachelor in interior design syllabus,
-  bachelor of spatial design,
-  bachelor of fashion design short form,
-  bachelor's degree in fashion design salary,
-  interior designer bachelor's degree,
-  bachelor of design careers,
-  bachelor of textile design colleges,
-  eligibility for b design,
+  <meta name="keywords" content="fasion designing,fasion designing course,bachelor of designing,bachelor of fashion design,famous fasion designers,bachelor's degree in fashion designing,bachelor of design salary,fasion and design,ba design,bachelor of fashion,bachelor degree of fashion designing,fashion designer bachelor degree,industrial design bachelor's degree,bachelor of design colleges,bachelor of interior design course,fashion designing bachelor course,bachelor of design eligibility,bachelor of fashion business,bachelor of interior design eligibility,bachelor of branded fashion design,bachelor of interior design course duration,ba designer,bachelor of fashion and apparel design,bachelor of fashion designing course,best colleges for bachelor of design,bachelors in fashion,fashion business bachelor degree,bachelor of design and business,bachelor in interior design syllabus,bachelor of spatial design,bachelor of fashion design short form,bachelor's degree in fashion design salary,interior designer bachelor's degree,bachelor of design careers,bachelor of textile design colleges,eligibility for b design,
   
     ">
-  <meta name="author" content="Naveen">
+  <meta name="author" content="thephotogenicbug">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="../dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="../faicon/css/all.css" />
   <link rel="stylesheet" href="../blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 
 <body>
@@ -76,9 +38,9 @@
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         
         <div class="navbar-nav ml-auto ">
-          <a href="../index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="../contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="../student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+           <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
+            <a href="https://eduprov.com/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
+            <a href="https://eduprov.com/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
         </div>
       </div>
     
@@ -88,6 +50,7 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
@@ -102,13 +65,11 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center text-primary" id="tag-font">
             Course Information
-          </button>
         </h2>
       </div>
     </div>
@@ -120,7 +81,7 @@
           In this trendy era, the world demands the most fashionable and snazzy dresses and outfits.
           There are many fan followers of the modish dresses as everyone wants to look up to date,
           but who transforms a useless piece of cloth into the most stylish donning dress.
-          It’s none other than the Fashion Designers. There is a great stipulation of the
+          It’s none other than the <b>Fashion Designers.</b> There is a great stipulation of the
           fashion designers in the world as fashion is never going to die.
         </p>
 
@@ -133,8 +94,8 @@
           more benefits.
         </p>
         <p class="text-justify">
-          But for becoming a fashion designer, which course is suitable? And how people become a
-          fashion designer? B. Design is generally a three-year course where in some institutions,
+          But for becoming a <b>fashion designer</b>, which course is suitable? And how people become a
+          fashion designer? <b>B.Design</b> is generally a three-year course where in some institutions,
           it may get extended up to a year. This is one of the most popular courses abroad and in the nation.
           So the one who opts for this course has high scope. This course is one of the prolific course, as the
           arena of this course is quite wide. People learn about the trend, color combination, designs, ornament
@@ -148,14 +109,12 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            ELIGIBILITY
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">    
+            Eligibility
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
 
           Well, for becoming a fashion designer, there is course named Bachelor in Fashion Design and Technology.
@@ -176,14 +135,12 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            SCOPE
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">      
+            Scope
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
           As mentioned above, the fever of fashion will never die and the people always love
           to welcome new trends and fashion stuff. So, the scope of the course is very high
@@ -223,19 +180,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -313,22 +273,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
