--- a/engineering.html
+++ b/engineering.html
@@ -58,6 +58,7 @@
 
   <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
   height: 350px;
+  padding:50px;
   background-position: center center;
   background-size: cover;">
  
@@ -75,11 +76,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-primary btn-large text-white">
+        <h4 class="text-center text-danger" id="tag-font">
             Diploma
-          </button>
-        </h2>
+        </h4>
       </div>
     </div>
   </div>
@@ -113,11 +112,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-primary btn-large text-white">
+        <h4 class="text-center text-danger" id="tag-font"> 
             Undergraduate 
-          </button>
-        </h2>
+        </h4>
       </div>
     </div>
   </div>
@@ -557,11 +554,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-primary btn-large text-white">
+        <h4 class="text-center text-danger" id="tag-font">
             Postgraduate
-          </button>
-        </h2>
+        </h4>
       </div>
     </div>
   </div>
@@ -573,7 +568,6 @@
           <label class="title fz-20">M.Tech Master of Engineering</label>
           <div class="desc">
             <p>
-              pending meta and title 
             </p>
           </div>
           <span class="link">Read More <i class="fa fa-arrow-right"></i></span>
@@ -581,18 +575,6 @@
       </a>
     </div>
   </div>
-
-
-
-
-
-
-
-
-  <!--Course End-->
-
-  <!--Footer Start-->
-  <!--Footer Start-->
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -602,19 +584,22 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                   <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url"class="text-white"> <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                   <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
+                <span>
+                  <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+               </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+             No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -692,22 +677,22 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/mba.html" style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/medical.html" style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/engineering.html" style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/law.html" style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/designing.html" style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/arts-humanities.html" style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
