--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="google-site-verification" content="sGemaMk14xYeehQTUUDM9YvubBurbC6n6yymjqDP8io" />
  <link rel="canonical" href="https://eduprov.com/" />
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <title>EDUPROV Education Admission Guidance Career Counselling </title>
   <meta name="description" content="  Hit The Best Top Notched Universities, Get a Grip On Admission
   Guidance And Travel The World At EDUPROV Educational Institute" />
@@ -30,11 +31,8 @@
   <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
   <link rel="apple-touch-icon" href="/images/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <link rel="stylesheet" href="dist/css/bootstrap.css" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="service.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
@@ -95,23 +93,23 @@
       </nav>
     </div>
     <!--Nav Bar End-->
-    <div class="banner" style=" background-image: url('https://i.ibb.co/cYVT9h3/pencils-1280558-1920.jpg'); width: 100%;
+    <div class="banner" style=" background-image: url('/images/Banner2.jpg'); width: 100%;
     height: 650px;
     background-position: center center;
-    padding: 66px;
+    padding: 55px;
     background-size: cover;" alt="banner" title="bannerimage">
    
       <div class="container text-white">
         <div class="row">
           <div class="col-md-12 mt-5 pt-1">
             
-            <h1 style="font-weight: bold" class="mt-5 text-center">EDUPROV EDUCATIONAL INSTITUTE</h1>
+            <h1 style="font-weight: bold" class="mt-5 text-center" id="heading">EDUPROV EDUCATIONAL INSTITUTE</h1>
             
-            <p class="text-justify text-center text-white mt-5" style="font-weight: bold">
+            <!--  <p class="text-justify text-center text-white mt-5" style="font-weight: bold">
               HIT THE BEST TOP NOTCHED UNIVERSITIES, GET A GRIP ON ADMISSION
               GUIDANCE AND TRAVEL THE WORLD AT EDUPROV EDUCATIONAL INSTITUTE
               <br />
-              <label class="mt-3"><a href="#back"><button class="btn btn-info ">CALL BACK</button></a></label>
+            <label class="mt-3"><a href="#back"><button class="btn btn-info ">CALL BACK</button></a></label>-->
             </p>
           </div>
         </div>
@@ -175,8 +173,6 @@
     </div>
  </section>
 
-
-
   <div class="container mt-2">
     <div class="row">
       <div class="col-md-12 text-center">
@@ -212,9 +208,8 @@
         </p>
       </div>
 
-      <div class="col-md-3" id="back">
-        <lottie-player src="https://assets6.lottiefiles.com/packages/lf20_fanpgweo.json" background="transparent"
-          speed="1" style="width: 300px; height: 300px; margin:auto;" loop autoplay></lottie-player>
+      <div class="col-md-3" >
+        <lottie-player src="https://assets4.lottiefiles.com/packages/lf20_mitl08lz.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px; margin:auto;"  loop  autoplay></lottie-player>
       </div >
     </div>
     <div class="row mt-2">
@@ -225,15 +220,15 @@
      <div class="col-md-4 bg-light" s>
       <lottie-player src="https://assets7.lottiefiles.com/private_files/lf30_fqygznk9.json"  background="transparent"  speed="1"  style="width: 400px; height: 400px; margin:auto;"  loop  autoplay></lottie-player>
     </div>
-    <div class="col-md-8 mt-3">
-      <p class="text-justify" id="paragraph-font">
+    <div class="col-md-8 mt-3" >
+      <p class="text-justify" id="paragraph-font" >
         Eduprov Educational Institute is an educational consultancy that offers prominent services like admission guidance, career counseling, and study abroad. admission can be a tedious task. thus Eduprov acts as a chief help in providing admissions to students in top colleges of Bangalore and throughout the states of India. on the other hand career counseling is the primal need for a student to pick the right course and the right college for a better future. Eduprov helps the student in a serene way by providing career counseling with the best career counselors guiding you towards a better hand on education and the college with courses. Eduprov not just gives you the latest informations on college and admissions it helps the students get pertinent orientation on Overseas Education, universities, admissions, hostels, and visa accommodation for those willing to study abroad in any part of the world. " A good education is a foundation for a better future"
       </p>
     </div>
     </div>
   </div>
 
-  <div class="container mt-5 ">
+  <!--<div class="container mt-5 ">
     <div class="row mt-2">
       <div class="col-md-12">
         <h4 class="text-center ">
@@ -265,7 +260,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="testimonials-clean">
     <div class="container">
       <div class="intro">
